# docs/apis/messengertypes.swagger.json
@@ -749,6 +749,72 @@
         ]
       }
     },
+    "/berty.messenger.v1/MessengerService/PushReceive": {
+      "post": {
+        "summary": "PushReceive handles a push payload, decrypts it if possible, adds it to the local store",
+        "operationId": "MessengerService_PushReceive",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/bertymessengerv1PushReceiveReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/bertymessengerv1PushReceiveRequest"
+            }
+          }
+        ],
+        "tags": [
+          "MessengerService"
+        ]
+      }
+    },
+    "/berty.messenger.v1/MessengerService/PushSetAutoShare": {
+      "post": {
+        "summary": "PushSetAutoShare Sets whether new groups should receive our push token automatically or not",
+        "operationId": "MessengerService_PushSetAutoShare",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1PushSetAutoShareReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1PushSetAutoShareRequest"
+            }
+          }
+        ],
+        "tags": [
+          "MessengerService"
+        ]
+      }
+    },
     "/berty.messenger.v1/MessengerService/ReplicationServiceRegisterGroup": {
       "post": {
         "summary": "ReplicationServiceRegisterGroup Asks a replication service to distribute a group contents",
@@ -1184,6 +1250,14 @@
         "conversation_replication_info": {
           "type": "string",
           "format": "int64"
+        },
+        "metadata_events": {
+          "type": "string",
+          "format": "int64"
+        },
+        "medias": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -1317,9 +1391,6 @@
         "display_name": {
           "type": "string"
         },
-        "avatar_cid": {
-          "type": "string"
-        },
         "link": {
           "type": "string"
         },
@@ -1331,6 +1402,20 @@
         },
         "replicate_new_groups_automatically": {
           "type": "boolean"
+        },
+        "avatar_cid": {
+          "type": "string"
+        },
+        "auto_share_push_token_flag": {
+          "type": "boolean"
+        },
+        "device_push_token": {
+          "type": "string",
+          "format": "byte"
+        },
+        "device_push_server": {
+          "type": "string",
+          "format": "byte"
         }
       }
     },
@@ -1345,6 +1430,18 @@
     },
     "bertymessengerv1InstanceExportDataRequest": {
       "type": "object"
+    },
+    "bertymessengerv1PushReceiveReply": {
+      "type": "object"
+    },
+    "bertymessengerv1PushReceiveRequest": {
+      "type": "object",
+      "properties": {
+        "payload": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
     },
     "bertymessengerv1ReplicationServiceRegisterGroupReply": {
       "type": "object"
@@ -1693,9 +1790,6 @@
         "display_name": {
           "type": "string"
         },
-        "avatar_cid": {
-          "type": "string"
-        },
         "link": {
           "type": "string"
         },
@@ -1744,6 +1838,12 @@
           "items": {
             "$ref": "#/definitions/v1ConversationReplicationInfo"
           }
+        },
+        "avatar_cid": {
+          "type": "string"
+        },
+        "shared_push_token_identifier": {
+          "type": "string"
         }
       }
     },
@@ -2100,6 +2200,9 @@
           "items": {
             "$ref": "#/definitions/v1Media"
           }
+        },
+        "out_of_store_message": {
+          "type": "boolean"
         }
       }
     },
@@ -2233,6 +2336,17 @@
           "type": "string",
           "format": "byte",
           "title": "optional passphase to decrypt the link"
+        }
+      }
+    },
+    "v1PushSetAutoShareReply": {
+      "type": "object"
+    },
+    "v1PushSetAutoShareRequest": {
+      "type": "object",
+      "properties": {
+        "enabled": {
+          "type": "boolean"
         }
       }
     },
